update server setup

--- a/chiptools.conf
+++ b/chiptools.conf
@@ -1,6 +1,6 @@
 <IfModule mod_wsgi.c>
     WSGIDaemonProcess chiptools user=www-data group=www-data threads=5
-    WSGIScriptAlias /chiptools /var/www/apps/chiptools/chiptools.wsgi
+    WSGIScriptAlias /app/chiptools /var/www/apps/chiptools/chiptools.wsgi
 
     <Directory /var/www/apps/chiptools>
         WSGIProcessGroup chiptools
